// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityArchetypeTips renders component 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <li
      className="active"
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#2491c1",
            }
          }
        >
          tip_type_for_tools, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#cb4e4e",
            }
          }
        >
          tip_type_for_room, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#47bb55",
            }
          }
        >
          tip_type_for_settings, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="tools"
      >
        <option
          value="tools"
        >
          tip_type_for_tools, [object Object]
        </option>
        <option
          value="room"
        >
          tip_type_for_room, [object Object]
        </option>
        <option
          value="settings"
        >
          tip_type_for_settings, [object Object]
        </option>
      </select>
    </div>
    <ul
      className="list"
    >
      <li>
        Appreciate proven methods
      </li>
      <li>
        Compatible with many other personalities
      </li>
      <li>
        Don’t get bogged down in the details
      </li>
      <li>
        Don’t mind letting others be in the spotlight
      </li>
      <li>
        Effective at applying tried and tested methods
      </li>
      <li>
        Independent thinker
      </li>
      <li>
        Prioritize people’s feelings over pointing out every misstep
      </li>
      <li>
        Skilled at controlling workflow
      </li>
      <li>
        Tuned into others’ emotions and performance
      </li>
      <li>
        Willing to do things the way others do them
      </li>
      <li>
        TU - 0
      </li>
      <li>
        TU - 1
      </li>
      <li>
        TU - 2
      </li>
      <li>
        TU - 3
      </li>
      <li>
        TU - 4
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips renders component with available types 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <li
      className="active"
      style={
        {
          "width": "50%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#cb4e4e",
            }
          }
        >
          tip_type_for_room, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
      style={
        {
          "width": "50%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#47bb55",
            }
          }
        >
          tip_type_for_settings, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="room"
      >
        <option
          value="room"
        >
          tip_type_for_room, [object Object]
        </option>
        <option
          value="settings"
        >
          tip_type_for_settings, [object Object]
        </option>
      </select>
    </div>
    <ul
      className="list"
    >
      <li>
        Can be taken for granted because you complete tasks without objections
      </li>
      <li>
        Can tolerate mediocre work from others
      </li>
      <li>
        Have difficulty with unexpected changes
      </li>
      <li>
        Not pushy and so can be overlooked
      </li>
      <li>
        Prioritize meeting deadlines over work quality
      </li>
      <li>
        Prone to feeling stressed
      </li>
      <li>
        Tend to find socially stimulating environments draining
      </li>
      <li>
        CZ - 0
      </li>
      <li>
        CZ - 1
      </li>
      <li>
        CZ - 2
      </li>
      <li>
        CZ - 3
      </li>
      <li>
        CZ - 4
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips renders component with enabled types 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <li
      className="active"
      style={
        {
          "width": "50%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#cb4e4e",
            }
          }
        >
          tip_type_for_room, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
      style={
        {
          "width": "50%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#47bb55",
            }
          }
        >
          tip_type_for_settings, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="room"
      >
        <option
          value="room"
        >
          tip_type_for_room, [object Object]
        </option>
        <option
          value="settings"
        >
          tip_type_for_settings, [object Object]
        </option>
      </select>
    </div>
    <ul
      className="list"
    >
      <li>
        Can be taken for granted because you complete tasks without objections
      </li>
      <li>
        Can tolerate mediocre work from others
      </li>
      <li>
        Have difficulty with unexpected changes
      </li>
      <li>
        Not pushy and so can be overlooked
      </li>
      <li>
        Prioritize meeting deadlines over work quality
      </li>
      <li>
        Prone to feeling stressed
      </li>
      <li>
        Tend to find socially stimulating environments draining
      </li>
      <li>
        CZ - 0
      </li>
      <li>
        CZ - 1
      </li>
      <li>
        CZ - 2
      </li>
      <li>
        CZ - 3
      </li>
      <li>
        CZ - 4
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips renders new type from clicking button 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <li
      className=""
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#2491c1",
            }
          }
        >
          tip_type_for_tools, [object Object]
        </div>
      </button>
    </li>
    <li
      className="active"
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#cb4e4e",
            }
          }
        >
          tip_type_for_room, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#47bb55",
            }
          }
        >
          tip_type_for_settings, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="room"
      >
        <option
          value="tools"
        >
          tip_type_for_tools, [object Object]
        </option>
        <option
          value="room"
        >
          tip_type_for_room, [object Object]
        </option>
        <option
          value="settings"
        >
          tip_type_for_settings, [object Object]
        </option>
      </select>
    </div>
    <ul
      className="list"
    >
      <li>
        Can be taken for granted because you complete tasks without objections
      </li>
      <li>
        Can tolerate mediocre work from others
      </li>
      <li>
        Have difficulty with unexpected changes
      </li>
      <li>
        Not pushy and so can be overlooked
      </li>
      <li>
        Prioritize meeting deadlines over work quality
      </li>
      <li>
        Prone to feeling stressed
      </li>
      <li>
        Tend to find socially stimulating environments draining
      </li>
      <li>
        CZ - 0
      </li>
      <li>
        CZ - 1
      </li>
      <li>
        CZ - 2
      </li>
      <li>
        CZ - 3
      </li>
      <li>
        CZ - 4
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips renders new type from selecting option 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <li
      className=""
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#2491c1",
            }
          }
        >
          tip_type_for_tools, [object Object]
        </div>
      </button>
    </li>
    <li
      className="active"
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#cb4e4e",
            }
          }
        >
          tip_type_for_room, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#47bb55",
            }
          }
        >
          tip_type_for_settings, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="room"
      >
        <option
          value="tools"
        >
          tip_type_for_tools, [object Object]
        </option>
        <option
          value="room"
        >
          tip_type_for_room, [object Object]
        </option>
        <option
          value="settings"
        >
          tip_type_for_settings, [object Object]
        </option>
      </select>
    </div>
    <ul
      className="list"
    >
      <li>
        Can be taken for granted because you complete tasks without objections
      </li>
      <li>
        Can tolerate mediocre work from others
      </li>
      <li>
        Have difficulty with unexpected changes
      </li>
      <li>
        Not pushy and so can be overlooked
      </li>
      <li>
        Prioritize meeting deadlines over work quality
      </li>
      <li>
        Prone to feeling stressed
      </li>
      <li>
        Tend to find socially stimulating environments draining
      </li>
      <li>
        CZ - 0
      </li>
      <li>
        CZ - 1
      </li>
      <li>
        CZ - 2
      </li>
      <li>
        CZ - 3
      </li>
      <li>
        CZ - 4
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips renders nothing if disabled 1`] = `null`;

exports[`PersonalityArchetypeTips renders nothing if no archetype 1`] = `null`;

exports[`PersonalityArchetypeTips renders nothing if no tips 1`] = `null`;

exports[`PersonalityArchetypeTips renders nothing if results not ready 1`] = `null`;

exports[`PersonalityArchetypeTips thirdPerson renders component 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <li
      className="active"
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#2491c1",
            }
          }
        >
          tip_type_for_tools, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#cb4e4e",
            }
          }
        >
          tip_type_for_caution_zone, [object Object]
        </div>
      </button>
    </li>
    <li
      className=""
      style={
        {
          "width": "33.333333333333336%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#47bb55",
            }
          }
        >
          tip_type_for_settings_third_person, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="tools"
      >
        <option
          value="tools"
        >
          tip_type_for_tools, [object Object]
        </option>
        <option
          value="caution_zone"
        >
          tip_type_for_caution_zone, [object Object]
        </option>
        <option
          value="settings_third_person"
        >
          tip_type_for_settings_third_person, [object Object]
        </option>
      </select>
    </div>
    <ul
      className="list"
    >
      <li>
        Appreciate proven methods
      </li>
      <li>
        Compatible with many other personalities
      </li>
      <li>
        Don’t get bogged down in the details
      </li>
      <li>
        Don’t mind letting others be in the spotlight
      </li>
      <li>
        Effective at applying tried and tested methods
      </li>
      <li>
        Independent thinker
      </li>
      <li>
        Prioritize people’s feelings over pointing out every misstep
      </li>
      <li>
        Skilled at controlling workflow
      </li>
      <li>
        Tuned into others’ emotions and performance
      </li>
      <li>
        Willing to do things the way others do them
      </li>
      <li>
        TP TU - 0
      </li>
      <li>
        TP TU - 1
      </li>
      <li>
        TP TU - 2
      </li>
      <li>
        TP TU - 3
      </li>
      <li>
        TP TU - 4
      </li>
    </ul>
  </div>
</div>
`;

exports[`PersonalityArchetypeTips thirdPerson renders firstPerson tips if no thirdPerson tips 1`] = `
<div
  className="container"
>
  <ul
    className="tabs"
  >
    <li
      className="active"
      style={
        {
          "width": "100%",
        }
      }
    >
      <button
        onClick={[Function]}
        type="button"
      >
        <div
          className="name"
          style={
            {
              "color": "#47bb55",
            }
          }
        >
          tip_type_for_settings_third_person, [object Object]
        </div>
      </button>
    </li>
  </ul>
  <div
    className="tab"
  >
    <div
      className="formSelect"
    >
      <select
        onChange={[Function]}
        value="settings_third_person"
      >
        <option
          value="settings_third_person"
        >
          tip_type_for_settings_third_person, [object Object]
        </option>
      </select>
    </div>
    <ul
      className="list"
    >
      <li>
        Allows for extended periods of independent or small group work
      </li>
      <li>
        De-emphasizes competition among colleagues
      </li>
      <li>
        Does not require high attention to details
      </li>
      <li>
        Encourages peer support in pursuit of goals
      </li>
      <li>
        Encourages sensitive and appropriate feedback
      </li>
      <li>
        Permits telecommuting on a full or partial basis
      </li>
      <li>
        Prioritizes flexibility
      </li>
      <li>
        Requires alertness to the thoughts and feelings of others
      </li>
      <li>
        Structured and routine
      </li>
      <li>
        Supports implementing existing methods
      </li>
    </ul>
  </div>
</div>
`;
